# keryx-desktop-wallet

./: .gitignore  QA_TEST_PLAN.md  README.md  SDK_CONTRACT.md  TESTING.md  index.html  package-lock.json  package.json  vite-env.d.ts  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Header.tsx  NodeSettingsModal.tsx
src/lib/: aiCaps.ts  aiRequest.ts  aiResponse.ts  settings.ts  wallet.ts
src/screens/: Chat.tsx  Consolidate.tsx  Home.tsx  Receive.tsx
